--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       content="43hCqye5FYTS4SnBMPKNFP-wBhfLHwRBykWJF1WJawo"
     />
 
+    <script type="module" src="src/js/index.js"></script>
     <!-- FACEBOOK -->
     <meta property="og:url" content="https://webpack-three-js.d1a.app" />
     <meta property="og:type" content="website" />
@@ -83,9 +84,7 @@
       Enable JavaScript to enjoy all the features of this app.
     </noscript>
     <main class="flex h-full text-color">
-      <canvas id="canvas" class="z-[0] h-full w-full"></canvas>
+      <!-- <canvas id="canvas" class="z-[0]"></canvas> -->
     </main>
-
-    <script type="module" src="src/js/index.js"></script>
   </body>
 </html>
